--- a/pipeline/test_loader.ipynb
+++ b/pipeline/test_loader.ipynb
@@ -120,11 +120,25 @@
    "source": [
     "import torchvision.transforms as T\n",
     "from loader import get_dataloaders\n",
+    "import tensorflow as tf\n",
+    "TARGET_SIZE = 32\n",
+    "def pad_up_to(t, max_in_dims, constant_values):\n",
+    "    diff = max_in_dims - tf.shape(t)\n",
+    "    paddings = tf.pad(diff[:, None], [[0, 0], [1, 0]])\n",
+    "    return tf.pad(t, paddings, 'CONSTANT', constant_values=constant_values)\n",
+    "class Expand:\n",
+    "    def __init__(self, max_size_=[2000, 2000, 3]):\n",
+    "        self.max_size = max_size_\n",
+    "    def call(self, input_tensors):\n",
+    "        padded_tensor = []\n",
+    "        for tens in input_tensors:\n",
+    "            paddings_ = pad_up_to(tens, self.max_size, 0)\n",
+    "            padded_tensor.append(paddings_)\n",
+    "        return padded_tensor\n",
     "\n",
-    "TARGET_SIZE = 128\n",
-    "transform = T.Compose([T.ToTensor(), T.Resize((TARGET_SIZE, TARGET_SIZE))])\n",
-    "train_loader, val_loader = get_dataloaders('../data', train_transform=transform, test_transform=transform, transform_name=f'Resize({TARGET_SIZE}, {TARGET_SIZE})')\n",
-    "first_train_batch = next(iter(train_loader))"
+    "transform = T.Compose([T.ToTensor(), Expand([2000, 2000, 3])])\n",
+    "train_loader, val_loader = get_dataloaders('../data', train_transform=transform, test_transform=transform)\n",
+    "first_val_batch = next(iter(train_loader))"
    ]
   },
   {
@@ -292,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
