--- a/pipeline/test_loader.ipynb
+++ b/pipeline/test_loader.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,68 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ba1d858e1894be59e7a9e5c1cfe6e8d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2268 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 600, 800])\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[39mreturn\u001b[39;00m padded_tensor\n\u001b[1;32m     18\u001b[0m transform \u001b[39m=\u001b[39m T\u001b[39m.\u001b[39mCompose([T\u001b[39m.\u001b[39mToTensor(), Expand([\u001b[39m3\u001b[39m, \u001b[39m2000\u001b[39m, \u001b[39m2000\u001b[39m])])\n\u001b[0;32m---> 19\u001b[0m train_loader, val_loader \u001b[39m=\u001b[39m get_dataloaders(\u001b[39m'\u001b[39;49m\u001b[39m../data\u001b[39;49m\u001b[39m'\u001b[39;49m, train_transform\u001b[39m=\u001b[39;49mtransform, test_transform\u001b[39m=\u001b[39;49mtransform)\n\u001b[1;32m     20\u001b[0m first_val_batch \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(\u001b[39miter\u001b[39m(train_loader))\n",
-      "File \u001b[0;32m~/Documents/team-swan/pipeline/loader.py:105\u001b[0m, in \u001b[0;36mget_dataloaders\u001b[0;34m(data_folder, batch_size, load_to_ram, train_transform, test_transform, transform_name)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_dataloaders\u001b[39m(data_folder: \u001b[39mstr\u001b[39m, batch_size\u001b[39m=\u001b[39m\u001b[39m64\u001b[39m, load_to_ram\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, train_transform\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, test_transform\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, transform_name: \u001b[39mstr\u001b[39m \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mtuple\u001b[39m[DataLoader, DataLoader]:\n\u001b[1;32m    104\u001b[0m     \u001b[39m# load datasets\u001b[39;00m\n\u001b[0;32m--> 105\u001b[0m     train_set \u001b[39m=\u001b[39m SwanDataset(data_folder, train\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, load_to_ram\u001b[39m=\u001b[39;49mload_to_ram, transform\u001b[39m=\u001b[39;49mtrain_transform, transform_name\u001b[39m=\u001b[39;49mtransform_name)\n\u001b[1;32m    106\u001b[0m     test_set \u001b[39m=\u001b[39m SwanDataset(data_folder, train\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, load_to_ram\u001b[39m=\u001b[39mload_to_ram, transform\u001b[39m=\u001b[39mtest_transform, transform_name\u001b[39m=\u001b[39mtransform_name)\n\u001b[1;32m    108\u001b[0m     \u001b[39m# make dataloaders\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/team-swan/pipeline/loader.py:52\u001b[0m, in \u001b[0;36mSwanDataset.__init__\u001b[0;34m(self, data_folder, load_to_ram, train, transform, transform_name)\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlabels \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m [label] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(new_files_dataset)\n\u001b[1;32m     50\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mload_to_ram:\n\u001b[1;32m     51\u001b[0m     \u001b[39m# load images\u001b[39;00m\n\u001b[0;32m---> 52\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimages \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_load_images(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata_folder, new_files_dataset)\n\u001b[1;32m     53\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     54\u001b[0m     \u001b[39m# save filenames to load images later\u001b[39;00m\n\u001b[1;32m     55\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfiles \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m new_files_dataset\n",
-      "File \u001b[0;32m~/Documents/team-swan/pipeline/loader.py:69\u001b[0m, in \u001b[0;36mSwanDataset._load_images\u001b[0;34m(self, path, files)\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[39mprint\u001b[39m(transform2(image)\u001b[39m.\u001b[39mshape)\n\u001b[1;32m     68\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransform \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 69\u001b[0m         image \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtransform(image)\n\u001b[1;32m     70\u001b[0m     images \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m [image]\n\u001b[1;32m     71\u001b[0m \u001b[39mreturn\u001b[39;00m images\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torchvision/transforms/transforms.py:95\u001b[0m, in \u001b[0;36mCompose.__call__\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, img):\n\u001b[1;32m     94\u001b[0m     \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransforms:\n\u001b[0;32m---> 95\u001b[0m         img \u001b[39m=\u001b[39m t(img)\n\u001b[1;32m     96\u001b[0m     \u001b[39mreturn\u001b[39;00m img\n",
-      "Cell \u001b[0;32mIn[14], line 14\u001b[0m, in \u001b[0;36mExpand.__call__\u001b[0;34m(self, input_tensors)\u001b[0m\n\u001b[1;32m     12\u001b[0m padded_tensor \u001b[39m=\u001b[39m []\n\u001b[1;32m     13\u001b[0m \u001b[39mfor\u001b[39;00m tens \u001b[39min\u001b[39;00m input_tensors:\n\u001b[0;32m---> 14\u001b[0m     paddings_ \u001b[39m=\u001b[39m pad_up_to(tens, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmax_size, \u001b[39m0\u001b[39;49m)\n\u001b[1;32m     15\u001b[0m     padded_tensor\u001b[39m.\u001b[39mappend(paddings_)\n\u001b[1;32m     16\u001b[0m \u001b[39mreturn\u001b[39;00m padded_tensor\n",
-      "Cell \u001b[0;32mIn[14], line 5\u001b[0m, in \u001b[0;36mpad_up_to\u001b[0;34m(t, max_in_dims, constant_values)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpad_up_to\u001b[39m(t, max_in_dims, constant_values):\n\u001b[0;32m----> 5\u001b[0m     diff \u001b[39m=\u001b[39m max_in_dims \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mshape(t)\n\u001b[1;32m      6\u001b[0m     paddings \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mpad(diff[:, \u001b[39mNone\u001b[39;00m], [[\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m], [\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m]])\n\u001b[1;32m      7\u001b[0m     \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39mpad(t, paddings, \u001b[39m'\u001b[39m\u001b[39mCONSTANT\u001b[39m\u001b[39m'\u001b[39m, constant_values\u001b[39m=\u001b[39mconstant_values)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torchvision.transforms as T\n",
     "from loader import get_dataloaders\n",
     "import torch\n",
     "class Expand:\n",
-    "    def __init__(self, max_size_=[2000, 2000, 3]):\n",
+    "    def __init__(self, max_size_=[3, 2000, 2000]):\n",
     "        self.max_size = max_size_\n",
-    "    def call(self, input_tensors):\n",
-    "        padded_torchs = []\n",
-    "        for torch_ in input_tensors:\n",
-    "            for i in range(3):\n",
-    "                if(self.max_size[i] > torch_.shape[i]):\n",
-    "                    shapes_new =  list(torch_.size())\n",
-    "                    shapes_new[i] = self.max_size[i] - torch_.shape[i]\n",
-    "                    dop_torch = torch.ones(shapes_new)\n",
-    "                    torch_ = torch.cat((torch_, dop_torch), i)\n",
-    "            padded_torchs.append(torch_)\n",
-    "        return padded_torchs\n",
+    "    def __call__(self, input_tensor):\n",
+    "        for i in range(3):\n",
+    "            shapes_new =  list(input_tensor.size())\n",
+    "            if(self.max_size[i] > shapes_new[i]):\n",
+    "                shapes_new[i] = self.max_size[i] - input_tensor.shape[i]\n",
+    "                dop_torch = torch.ones(shapes_new)\n",
+    "                input_tensor = torch.cat((input_tensor, dop_torch), i)\n",
+    "        return input_tensor\n",
     "\n",
-    "transform = T.Compose([T.ToTensor(), Expand([2000, 2000, 3])])\n",
+    "transform = T.Compose([T.ToTensor(), Expand([3, 2000, 2000])])\n",
     "train_loader, val_loader = get_dataloaders('../data', train_transform=transform, test_transform=transform)\n",
     "first_val_batch = next(iter(train_loader))"
    ]
