--- a/pipeline/test_loader.ipynb
+++ b/pipeline/test_loader.ipynb
@@ -12,26 +12,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'torchvision.transforms' has no attribute 'resize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m                 input_tensor \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat((input_tensor, dop_torch), i)\n\u001b[1;32m     14\u001b[0m         \u001b[39mreturn\u001b[39;00m input_tensor\n\u001b[0;32m---> 16\u001b[0m transform \u001b[39m=\u001b[39m T\u001b[39m.\u001b[39mCompose([T\u001b[39m.\u001b[39mToTensor(), Expand([\u001b[39m3\u001b[39m, \u001b[39m2000\u001b[39m, \u001b[39m2000\u001b[39m]), T\u001b[39m.\u001b[39;49mresize((\u001b[39m32\u001b[39m, \u001b[39m32\u001b[39m))])\n\u001b[1;32m     17\u001b[0m train_loader, val_loader \u001b[39m=\u001b[39m get_dataloaders(\u001b[39m'\u001b[39m\u001b[39m../data\u001b[39m\u001b[39m'\u001b[39m, train_transform\u001b[39m=\u001b[39mtransform, test_transform\u001b[39m=\u001b[39mtransform)\n\u001b[1;32m     18\u001b[0m first_val_batch \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(\u001b[39miter\u001b[39m(train_loader))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'torchvision.transforms' has no attribute 'resize'"
+     ]
+    }
+   ],
    "source": [
     "import torchvision.transforms as T\n",
     "from loader import get_dataloaders\n",
     "import torch\n",
     "class Expand:\n",
-    "    def __init__(self, max_size_=[3, 2000, 2000]):\n",
-    "        self.max_size = max_size_\n",
+    "    def __init__(self, max_=2000):\n",
+    "        self.max = max_\n",
     "    def __call__(self, input_tensor):\n",
     "        for i in range(3):\n",
+    "            mx = 0\n",
     "            shapes_new =  list(input_tensor.size())\n",
+    "            for i in range(3):\n",
+    "                if(mx < shapes_new[i]):\n",
+    "                    mx = shapes_new[i]\n",
+    "            self.max_size = [0]*3\n",
+    "            self.max_size[0] = 3\n",
+    "            self.max_size[1] = mx\n",
+    "            self.max_size[2] = mx\n",
     "            if(self.max_size[i] > shapes_new[i]):\n",
     "                shapes_new[i] = self.max_size[i] - input_tensor.shape[i]\n",
     "                dop_torch = torch.ones(shapes_new)\n",
     "                input_tensor = torch.cat((input_tensor, dop_torch), i)\n",
     "        return input_tensor\n",
     "\n",
-    "transform = T.Compose([T.ToTensor(), Expand([3, 2000, 2000])])\n",
+    "transform = T.Compose([T.ToTensor(), Expand()])\n",
     "train_loader, val_loader = get_dataloaders('../data', train_transform=transform, test_transform=transform)\n",
     "first_val_batch = next(iter(train_loader))"
    ]
