--- a/pipeline/train.ipynb
+++ b/pipeline/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -19,12 +19,20 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "device(type='cuda', index=0)"
+       "device(type='cpu')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +83,27 @@
     "\n",
     "# make dataloaders\n",
     "TARGET_SIZE = 128\n",
-    "transform = T.Compose([T.ToTensor(), T.Resize((TARGET_SIZE, TARGET_SIZE))])\n",
+    "class Expand:\n",
+    "    def __init__(self, max_=2000):\n",
+    "        self.max = max_\n",
+    "    def __call__(self, input_tensor):\n",
+    "        for i in range(3):\n",
+    "            mx = 0\n",
+    "            shapes_new =  list(input_tensor.size())\n",
+    "            for i in range(3):\n",
+    "                if(mx < shapes_new[i]):\n",
+    "                    mx = shapes_new[i]\n",
+    "            self.max_size = [0]*3\n",
+    "            self.max_size[0] = 3\n",
+    "            self.max_size[1] = mx\n",
+    "            self.max_size[2] = mx\n",
+    "            if(self.max_size[i] > shapes_new[i]):\n",
+    "                shapes_new[i] = self.max_size[i] - input_tensor.shape[i]\n",
+    "                dop_torch = torch.ones(shapes_new)\n",
+    "                input_tensor = torch.cat((input_tensor, dop_torch), i)\n",
+    "        return input_tensor.Resize((TARGET_SIZE, TARGET_SIZE))\n",
+    "\n",
+    "transform = T.Compose([T.ToTensor(), Expand()])\n",
     "train_loader, val_loader = get_dataloaders('../data', train_transform=transform, test_transform=transform, transform_name=f'Resize({TARGET_SIZE}, {TARGET_SIZE})')\n",
     "\n",
     "# show dataset size\n",
@@ -264,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
