--- a/pipeline/train.ipynb
+++ b/pipeline/train.ipynb
@@ -66,14 +66,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train size: 6777. Val size: 2261. Val ratio: 25.02%\n"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6316a81ac8dc4a8fa15597f0e993c439",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2258 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Tensor' object has no attribute 'Resize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[39mreturn\u001b[39;00m input_tensor\u001b[39m.\u001b[39mResize((TARGET_SIZE, TARGET_SIZE))\n\u001b[1;32m     26\u001b[0m transform \u001b[39m=\u001b[39m T\u001b[39m.\u001b[39mCompose([T\u001b[39m.\u001b[39mToTensor(), Expand()])\n\u001b[0;32m---> 27\u001b[0m train_loader, val_loader \u001b[39m=\u001b[39m get_dataloaders(\u001b[39m'\u001b[39;49m\u001b[39m../data\u001b[39;49m\u001b[39m'\u001b[39;49m, train_transform\u001b[39m=\u001b[39;49mtransform, test_transform\u001b[39m=\u001b[39;49mtransform, transform_name\u001b[39m=\u001b[39;49m\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mResize(\u001b[39;49m\u001b[39m{\u001b[39;49;00mTARGET_SIZE\u001b[39m}\u001b[39;49;00m\u001b[39m, \u001b[39;49m\u001b[39m{\u001b[39;49;00mTARGET_SIZE\u001b[39m}\u001b[39;49;00m\u001b[39m)\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     29\u001b[0m \u001b[39m# show dataset size\u001b[39;00m\n\u001b[1;32m     30\u001b[0m TRAIN_SIZE \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(train_loader\u001b[39m.\u001b[39mdataset)\n",
+      "File \u001b[0;32m~/Documents/team-swan/pipeline/loader.py:102\u001b[0m, in \u001b[0;36mget_dataloaders\u001b[0;34m(data_folder, batch_size, load_to_ram, train_transform, test_transform, transform_name)\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_dataloaders\u001b[39m(data_folder: \u001b[39mstr\u001b[39m, batch_size\u001b[39m=\u001b[39m\u001b[39m64\u001b[39m, load_to_ram\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, train_transform\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, test_transform\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, transform_name: \u001b[39mstr\u001b[39m \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mtuple\u001b[39m[DataLoader, DataLoader]:\n\u001b[1;32m    101\u001b[0m     \u001b[39m# load datasets\u001b[39;00m\n\u001b[0;32m--> 102\u001b[0m     train_set \u001b[39m=\u001b[39m SwanDataset(data_folder, train\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, load_to_ram\u001b[39m=\u001b[39;49mload_to_ram, transform\u001b[39m=\u001b[39;49mtrain_transform, transform_name\u001b[39m=\u001b[39;49mtransform_name)\n\u001b[1;32m    103\u001b[0m     test_set \u001b[39m=\u001b[39m SwanDataset(data_folder, train\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, load_to_ram\u001b[39m=\u001b[39mload_to_ram, transform\u001b[39m=\u001b[39mtest_transform, transform_name\u001b[39m=\u001b[39mtransform_name)\n\u001b[1;32m    105\u001b[0m     \u001b[39m# make dataloaders\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/team-swan/pipeline/loader.py:51\u001b[0m, in \u001b[0;36mSwanDataset.__init__\u001b[0;34m(self, data_folder, load_to_ram, train, transform, transform_name)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlabels \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m [label] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(new_files_dataset)\n\u001b[1;32m     49\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mload_to_ram:\n\u001b[1;32m     50\u001b[0m     \u001b[39m# load images\u001b[39;00m\n\u001b[0;32m---> 51\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimages \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_load_images(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata_folder, new_files_dataset)\n\u001b[1;32m     52\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     \u001b[39m# save filenames to load images later\u001b[39;00m\n\u001b[1;32m     54\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfiles \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m new_files_dataset\n",
+      "File \u001b[0;32m~/Documents/team-swan/pipeline/loader.py:66\u001b[0m, in \u001b[0;36mSwanDataset._load_images\u001b[0;34m(self, path, files)\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[39m# apply transform\u001b[39;00m\n\u001b[1;32m     65\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransform \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 66\u001b[0m         image \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtransform(image)\n\u001b[1;32m     67\u001b[0m     images \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m [image]\n\u001b[1;32m     68\u001b[0m \u001b[39mreturn\u001b[39;00m images\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torchvision/transforms/transforms.py:95\u001b[0m, in \u001b[0;36mCompose.__call__\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, img):\n\u001b[1;32m     94\u001b[0m     \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransforms:\n\u001b[0;32m---> 95\u001b[0m         img \u001b[39m=\u001b[39m t(img)\n\u001b[1;32m     96\u001b[0m     \u001b[39mreturn\u001b[39;00m img\n",
+      "Cell \u001b[0;32mIn[4], line 24\u001b[0m, in \u001b[0;36mExpand.__call__\u001b[0;34m(self, input_tensor)\u001b[0m\n\u001b[1;32m     22\u001b[0m         dop_torch \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mones(shapes_new)\n\u001b[1;32m     23\u001b[0m         input_tensor \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mcat((input_tensor, dop_torch), i)\n\u001b[0;32m---> 24\u001b[0m \u001b[39mreturn\u001b[39;00m input_tensor\u001b[39m.\u001b[39;49mResize((TARGET_SIZE, TARGET_SIZE))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'Resize'"
      ]
     }
    ],
@@ -101,7 +124,8 @@
     "                shapes_new[i] = self.max_size[i] - input_tensor.shape[i]\n",
     "                dop_torch = torch.ones(shapes_new)\n",
     "                input_tensor = torch.cat((input_tensor, dop_torch), i)\n",
-    "        return input_tensor.Resize((TARGET_SIZE, TARGET_SIZE))\n",
+    "        transform_end = T.Resize((TARGET_SIZE, TARGET_SIZE))\n",
+    "        return transform_end.forward(input_tensor)\n",
     "\n",
     "transform = T.Compose([T.ToTensor(), Expand()])\n",
     "train_loader, val_loader = get_dataloaders('../data', train_transform=transform, test_transform=transform, transform_name=f'Resize({TARGET_SIZE}, {TARGET_SIZE})')\n",
